feat: add new image

--- a/html.html
+++ b/html.html
@@ -11,6 +11,9 @@
 <div class="container">
 <h1>Suleimenov Temirlan</h1>
 
+  <div class="image-container">
+    <img src="ava.jpg" alt="ava">
+  </div>
 <h2>Contacts</h2>
 <ul>
   <li><strong>Location:</strong> Astana, Kazakhstan</li>
